# CloudWalk-challenge

./: .gitignore  Dockerfile  README.md  build_vectorstore.py  digest.txt  docker-compose.yml  graph.py  main.py  pyproject.toml  tools.py
