[project]
name = "agent-swarm"
version = "0.1.0"
description = "Code challenge for cloud walk"
authors = [
    {name = "Caio Vasconcelos Silva Andrade",email = "caiovsa2@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.13,<4.0"
dependencies = [
    "langchain (>=0.3.27,<0.4.0)",
    "langchain-openai (>=0.3.33,<0.4.0)",
    "langgraph (>=0.6.8,<0.7.0)",
    "fastapi (>=0.118.0,<0.119.0)",
    "beautifulsoup4 (>=4.14.2,<5.0.0)",
    "langchain-community (>=0.3.30,<0.4.0)",
    "pymilvus (>=2.6.2,<3.0.0)",
    "langchain-milvus (>=0.2.1,<0.3.0)",
    "uvicorn[standard] (>=0.37.0,<0.38.0)",
    "langchain-tavily (>=0.2.11,<0.3.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
